style.css
* {
    margin: 0%;
    padding: 0%;
}


.header {
    position: sticky;
    top: 0;
    background-color: white;
}
.nav1 {
    display: flex;
    justify-content: center;
    justify-content: space-around;
    position: relative;
    margin-top: 20px;
}
.nav1 input {
    width: 456px;
    height: 33px;
    position: relative;
    margin: auto;
    border-radius: 4px;
    text-align: left;
    font-size: 1rem;
}

.imgContainer {
    display: flex;
    gap:5rem;
    align-items: center;
}

.linkContainer {
    display: flex;
    position: relative;
    margin: auto;
    font-size: 1rem;
    gap: 1.8rem;
}

.nav2 {
    display: flex;
    justify-content: center;
    justify-content: space-around;
    align-items: center;
    position: relative;
    margin-top: 20px;
    background-color: rgb(251,249,247);
    height: 60px;
}

.nav2 span {
    position: relative;
    text-align: center;
    font-weight: 500;
    color: rgb(0,0,66);
}

.nav2 span:hover {
    border-bottom:4px solid rgb(0,0,66) ;
}

.imgContainer2 {
    display: flex;
    justify-content: right;
}
.imgContainer2 img {
    height: 39px;
    width: 91px;
    border-radius: 5px;
}

.glasses {
    display: flex;
    justify-content: space-evenly;
    background-color: rgb(245,245,245);
    position: relative;
    margin-top: 10px;
}
.glasses img {
    width: 15%;
    height: auto;
    border-radius: 20px;
}

.main img{
    width: 100%;
    height: auto;
}
.discover img {
    width: 100%;
    height: auto;
}

.wearTrend {
    position: relative;
    margin-left: 13vmin;
}
.wearTrend h4 {
    font-family: "Rajdhani", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 3rem;
}
.wearTrend h3 {
    font-family: "Rajdhani", sans-serif;
    font-weight: 600;
    font-style: normal;
    font-size: 3rem;
}

.wearTrend p {
    font-family: "Hind", sans-serif;
    font-weight: 500;
    font-style: normal;
}

.cart {
    display: flex;
    position: relative;
    justify-content: space-between;
    /* margin-top: 100px;
    margin-bottom: 50px; */
    align-items: center;
    height: 400px;
    background-color: #fff;
}

.banner img {
    width: 100%;
    height: auto;
}

.cart .card img {
    width: 75%;
}

.cart .card {
    text-align: center;
    font-size:20px;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    letter-spacing: 0.2px;
}
.card button {
    background-color: #56B7C3;
    color: white;
    padding: 10px 0;
    width: 140px;
    height: 45px;
    text-align: center;
    font-weight: 600;
    border-radius: 5px;
    letter-spacing: 0.5px;
    font-size: 16px;
    border: none;
    margin-top: 22px;
}
.banner h2 {
    width: 94%;
    color: black;
    letter-spacing: 0.5px;
    font-size: 30px;
    position: relative;
    text-align: center;
    padding: 22px;
}

.footer {
    display: flex;
    justify-content: left;
    gap: 10rem;
    background-color: #000042;
    color: white;
    padding: 43px;
}

.footer .list ul {
    list-style: none;
}

.footer1 {
    background-color: #000042;
    color: white;
    padding: 43px;
}
.footer1 h1 {
    color: white;
    display: block;
}
.footer .list a {
    text-decoration: none;
    color: white;
}

.lastFooter {
    background-color: #fff;
    height: 2px;
}

.footer2 h3 {
    color: white;
}
.footer2 {
    display: flex;
    height: 50px;
    justify-content: space-evenly;
    align-items: center;
    color: white;
    background-color: #000042;
}

.top img {
    height: 46%;
    width: 46%;
}
.top {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 10px;
}
.buyBanner {
    position: relative;
    
}
.buyBanner h2 {
    text-align: center;
    margin-top: 20px;
    padding: 20px;
} 
.bottom { 
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 10px;
}

.bottom img{ 
    height: 46%;
    width: 46%;
}

